<resources>
    <string name="app_name">FoodApplication</string>
    <string name="map_key" translatable="false">AIzaSyB_RuQCaFrm4wAIamLJA9R-NvSc7RmjlrA</string>
    <string name="save">Save</string>
    <string name="nav_label_home">Home</string>
    <string name="nav_label_order">Order</string>
    <string name="nav_label_favorites">Favorites</string>
    <string name="nav_label_notif">Notifications</string>
    <string name="nav_label_account">Account</string>
    <string name="nav_label_update">Update</string>
    <string name="activity_fav">Favorites</string>
    <string name="activity_account_vouchers">My Vouchers</string>
    <string name="activity_account_shopee">My Shopee Coins</string>
    <string name="activity_account_payment">Payment Method</string>
    <string name="activity_account_address">Address</string>
    <string name="activity_account_invite">Invite Friends</string>
    <string name="activity_account_support">Customer Support</string>
    <string name="activity_account_shopowner">For Shop Owners</string>
    <string name="activity_account_policy">User Policy</string>
    <string name="activity_account_settings">Settings</string>
    <string name="activity_account_about">About us…</string>
    <string name="activity_account_logout">LOGOUT</string>
    <string name="activity_account_version">Version 0.00.01</string>
    <string name="activity_account_vouchers_valid">Valid</string>
    <string name="activity_account_vouchers_invalid">Invalid</string>
    <string name="activity_account_vouchers_used">>Used</string>
    <string name="activity_account_shopee_faq">How to earn</string>
    <string name="activity_account_shopee_link">Link Shopee Account</string>
    <string name="activity_account_support_search">Search your issues</string>
    <string name="activity_account_support_report">Report a problem</string>
    <string name="activity_account_support_report_photo">Upload photos</string>
    <string name="activity_account_support_report_photo_desc">You may upload multiple files. Images and PDF only.</string>
    <string name="activity_account_support_report_contact">Contact info</string>
    <string name="activity_account_support_report_contact_hint">Name, email, phone number…</string>
    <string name="activity_account_support_report_issue">Describe the issue</string>
    <string name="activity_account_support_report_send">Send report</string>
    <string name="activity_account_payment_topup">Top up Credits</string>
    <string name="activity_account_payment_history">View Transaction History</string>
    <string name="activity_account_payment_50000">50000</string>
    <string name="activity_account_payment_100000">100000</string>
    <string name="activity_account_payment_200000">200000</string>
    <string name="activity_account_payment_300000">300000</string>
    <string name="activity_account_payment_500000">500000</string>
    <string name="activity_account_payment_1000000">1000000</string>
    <string name="activity_account_payment_2000000">2000000</string>
    <string name="activity_account_payment_5000000">5000000</string>
    <string name="activity_account_payment_10000000">10000000</string>
    <string name="activity_account_payment_deposit">Deposit</string>
    <string name="activity_account_address_input">Enter address</string>
    <string name="activity_account_address_floor">Building Floor No. (Optional)</string>
    <string name="activity_account_address_gate">Gate (Optional)</string>
    <string name="activity_account_address_label">Address Label (Optional)</string>
    <string name="activity_account_address_label_work">Work</string>
    <string name="activity_account_address_label_other">Other</string>
    <string name="activity_account_address_label_other_spec">Label name, e.g. School, Gym</string>
    <string name="activity_account_address_contact">Contact information</string>
    <string name="activity_account_address_contact_name">Contact name</string>
    <string name="activity_account_address_contact_number">Number</string>
    <string name="activity_account_address_delivery">Delivery note (Optional)</string>
    <string name="activity_account_settings_account">Account Settings</string>
    <string name="activity_account_settings_account_info">Information &amp; Contact</string>
    <string name="activity_account_settings_account_password">Password</string>
    <string name="activity_account_settings_app">App Settings</string>
    <string name="activity_account_settings_app_lang">Change Language</string>
    <string name="activity_account_settings_app_notif">Notifications</string>
    <string name="activity_account_settings_account_info_avatar">Change avatar</string>
    <string name="activity_account_settings_account_info_phone">Change phone number</string>
    <string name="activity_account_settings_account_info_name">Change name</string>
    <string name="activity_account_settings_account_info_email">Change email</string>
    <string name="activity_account_settings_account_info_gender">Set gender</string>
    <string name="activity_account_settings_account_info_dob">Set date of birth</string>
    <string name="activity_account_settings_account_info_occupation">Set occupation</string>
    <string name="activity_account_settings_account_info_occupation_desc">Select an Occupation</string>
    <string name="activity_account_settings_account_info_occupation_office">Office State/Professional</string>
    <string name="activity_account_settings_account_info_occupation_free">Self-Employed/Freelancer</string>
    <string name="activity_account_settings_account_info_occupation_student">Student</string>
    <string name="activity_account_settings_account_info_occupation_home">At Home</string>
    <string name="activity_account_settings_account_info_occupation_other">Other</string>
    <string name="activity_account_settings_account_password_desc">Update password</string>
    <string name="activity_account_settings_account_password_old">Enter Current Password</string>
    <string name="activity_account_settings_account_password_new">New Password</string>
    <string name="activity_account_settings_account_password_confirm">Confirm New Password</string>
    <string name="activity_account_settings_notif_push">Push Notifications</string>
    <string name="activity_account_settings_notif_push_desc">Highly recommended to keep it on, so that you will be notified for all order status updates</string>
    <string name="activity_account_settings_notif_promo">Promotions</string>
    <string name="activity_account_settings_notif_promo_desc">Notify me when there are promotions in the selected province/city</string>
    <string name="activity_account_settings_notif_province">Province/City</string>
    <string name="activity_account_settings_invite_sms">Send to SMS</string>
    <string name="activity_account_settings_invite_email">Send to Email</string>
    <string name="activity_account_settings_invite_link">Copy app download link</string>
    <string name="activity_account_policy_payment">Hướng dẫn thanh toán</string>
    <string name="activity_account_policy_payment_answer">
        Các phương thức thanh toán được áp dụng:
        \n- Thanh toán tiền mặt khi nhận hàng
        \n- Thanh toán qua thẻ Debit/Credit VISA/MASTER/JCB
        \n- Thanh toán qua thẻ ATM nội địa
        \n- Thanh toán qua Credit
    </string>
    <string name="activity_account_policy_privacy">Chính sách bảo mật thông tin</string>
    <string name="activity_account_policy_privacy_answer">
        Chúng tôi có thể thu nhập dữ liệu cá nhân của người dùng khi:
        \n- Người dùng đồng ý bất kỳ thỏa thuận nào hoặc cung cấp cho chúng tôi dữ liệu hoặc thông tin liên quan đến tương tác giữa người dùng với Chúng tôi, hoặc khi người dùng sử dụng dịch vụ của chúng tôi;
        \n- Người dùng tương tác và liên lạc với chúng tôi;
        \n- Người dùng sử dụng dịch vụ của chúng tôi;
        \n- Người dùng thực hiện các giao dịch thông qua dịch vụ của chúng tôi;
        \n- Người dùng cung cấp cho chúng tôi thông tin phản hồi, góp ý, khảo sát hoặc khiếu nại về dịch vụ;
        \n- Người dùng tham gia cuộc thi do chúng tôi tổ chức;
        \n- Người dùng gửi dữ liệu cá nhân cho chúng tôi vì bất kỳ lý do nào.

        \n\nDữ liệu cá nhân được yêu cầu cung cấp bao gồm, nhưng không giới hạn:
        \n- Họ tên
        \n- Số điện thoại di động
        \n- Địa chỉ email
        \n- Địa chỉ giao hàng
        \n- Bất kỳ thông tin nào khác về người dùng khi người dùng đăng nhập và/hoặc sử dụng dịch vụ
    </string>
    <string name="activity_account_policy_regulation">Quy chế hoạt động</string>
    <string name="activity_account_policy_regulation_answer">
        I. Nguyên tắc chung
        \nII. Quy định chung
        \nIII. Quy trình giao dịch
        \nIV. Quy trình thanh toán
        \nV. Đảm bảo an toàn giao dịch
        \nVI. Chính sách bảo vệ thông tin cá nhân của người tiêu dùng
        \nVII. Quản lý thông tin xấu
        \nVIII. Trách nhiệm trong trường hợp phát sinh lỗi ký thuật
        \nIX. Quyền và trách nhiệm của Ban quản lý Sàn giao dịch
        \nX. Quyền và trách nhiệm của đối tác
        \nXI. Quyền và trách nhiệm của Khách hàng trên Sàn giao dịch
        \nXII. Điều khoản áp dụng
        \nXIII. Điều khoản cam kết
    </string>
    <string name="activity_account_policy_tos">Điều khoản dịch vụ</string>
    <string name="activity_account_policy_tos_answer">
        Tôi đã đọc các điều khoản dịch vụ này và đồng ý với tất cả các điều khoản như trên cũng như bất kỳ điều khoản nào được chỉnh sửa sau này.
    </string>
    <string name="activity_account_policy_dispute">Giải quyết tranh chấp, khiếu nại</string>
    <string name="activity_account_policy_dispute_answer">
        Bước 1: Thành viên khách hàng/người tiêu dùng khiếu nại về hàng hóa của nhà cung cấp qua email: info@foodapp.vn. Thành viên có thể phản ánh trực tiếp đến ban quản trị.
        \nBước 2: Bộ phận Chăm sóc Khách hàng sẽ tiếp nhận các khiếu nại của thành viên khách hàng/người tiêu dùng, tùy theo tính chất và mức độ của khiếu nại thì bên Sàn giao dịch Ứng dụng sẽ có những biện pháp cụ thế hỗ trọ khác hàng/người tiêu dùng để giải quyết tranh chấp đó.
        \nBước 3: Trong trường nằm ngoài khả năng và thẩm quyền của Sàn giao dịch Ứng dụng thì ban quản trị sẽ yêu cầu khách hàng/người tiêu dùng đưa vụ việc này ra cơ quan nhà nước có thẩm quyền giải quyết theo pháp luật.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acti_noti_sale">Sale</string>
    <string name="acti_noti_new">News</string>
    <string name="title_activity_order_fragment">OrderFragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="large_text">
        FoodManagementApp là một Sàn giao dịch e-Commerce cung cấp nhiều dịch vụ, tiện ích báo gồm: đặt và giao đồ ăn, thức uống và mua sắm trên nền tảng di động. Bất kể sáng, trưa, chiều, tối, FoodManagementApp sẽ thỏa mãn nhu cầu của bạn với chỉ thông qua vài bước đơn giản.
        \n\nBạn có thể dễ dàng đặt hàng thông qua một trong ba cách:
        \n1. Website: https://github.com/Votrungtin2001/Food-Application-MobileProgramming
        \n2. FoodManagementApp: Android
        \n3. App UIT: iOS hoặc Android
    </string>
    <string name="notification_setting">Notification Setting</string>
    <string name="khuy_n_m_i">Khuyến mãi</string>
    <string name="khuy_n_kh_ch_lu_n_lu_n_b_t_nh_n_t_nh_tr_ng_th_ng_b_o_v_n_h_ng">Khuyến khích luôn luôn bật để nhận tình trạng thông báo về đơn hàng</string>
    <string name="th_ng_b_o_khuy_n_m_i_c_c_t_nh_th_nh_ch_n">Thông báo khuyến mãi ở các tỉnh thành đã chọn</string>
    <string name="t_nh_th_nh">Tỉnh thành</string>
    <string name="g_i_th_ng_b_o_v_khuy_n_m_i_t_i_nh_ng_a_i_m_b_n_d_i">Gửi thông báo về khuyến mãi tại những địa điểm bên dưới</string>
    <string name="service">Dịch vụ</string>
</resources>