<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE7E7"
    tools:context=".AccountAddressFragment">

    <Spinner
        android:id="@+id/spinCityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="3dp"
        android:background="#FFFFFF" />

    <Spinner
        android:id="@+id/spinDistrictInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinCityInput"
        android:layout_marginTop="3dp"
        android:background="#FFFFFF" />

    <EditText
        android:id="@+id/txtAccountAddressInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinDistrictInput"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="1dp"
        android:background="#FFFFFF"
        android:editable="true"
        android:ems="10"
        android:hint="@string/activity_account_address_input"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtAccountAddressGate"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAccountAddressFloor"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="-1dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/activity_account_address_gate"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtAccountAddressFloor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinDistrictInput"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="1dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/activity_account_address_floor"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="343dp"
        android:text="@string/activity_account_address" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAccountAddressGate"
        android:layout_marginTop="3dp"
        android:text="@string/activity_account_address_label" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/nav_label_home" />

        <RadioButton
            android:id="@+id/rbWork"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/activity_account_address_label_work" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:checked="false"
            android:text="@string/activity_account_address_label_other" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtOtherLabelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rbGroup"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/activity_account_address_label_other_spec"
        android:inputType="textPersonName"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnAccountAddressSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/save" />

</RelativeLayout>