<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/nav_label_home" />
    <item
        android:id="@+id/nav_update"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/nav_label_update" />

    <item
        android:id="@+id/nav_product"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="Product" />

    <item
        android:id="@+id/nav_account"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/nav_label_account" />

</menu>