<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.tabs.TabLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:tabMode="fixed"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabVouchersValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_account_vouchers_valid" />

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabVouchersUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_account_vouchers_used" />

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabVouchersInvalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_account_vouchers_invalid" />

</com.google.android.material.tabs.TabLayout>