<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSupportReportFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/activity_account_support_report_photo"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="0dp"
        android:text="@string/activity_account_support_report_photo_desc" />

    <ImageButton
        android:id="@+id/btnReportAddImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="11dp"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnReportAddImage"
        android:layout_marginTop="0dp"
        android:text="@string/activity_account_support_report_contact"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/activity_account_support_report_contact_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPersonName"
        android:layout_marginTop="0dp"
        android:text="@string/activity_account_support_report_issue"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextMultiLine"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="-1dp"
        android:text="@string/activity_account_support_report_send"
        app:backgroundTint="@color/scrollBackground" />

</RelativeLayout>